--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changes
 Next release
 ------------
 
+- Add a ``__str__`` method to the ``colander.Invalid`` exception that
+  prints an error summary.
+
 - Various error message improvements.
 
 - Add ``colander.Length`` validator class.
