- Allow ``colander.Date`` and ``colander.DateTime`` invalid error   messages to be customized.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,9 @@ Next release
 - The constructor arguments to a the ``colander.Schema`` class are now
   sent to the constructed SchemaNode rather than to the type it represents.
 
+- Allow ``colander.Date`` and ``colander.DateTime`` invalid error
+  messages to be customized.
+
 0.5 (2010-03-31)
 ----------------
 
