--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changes
 =======
 
+Next release
+------------
+
+- Internationalized error messages.  This required some changes to
+  error message formatting, which may impact you if you were feeding
+  colander an error message template.
+
 0.5.2 (2010-04-09)
 ------------------
 
