--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,10 @@ Next release
   error message formatting, which may impact you if you were feeding
   colander an error message template.
 
+- New argument to ``colander.String`` constructor: ``allow_empty``.
+  This is a boolean representing whether an empty string is a valid
+  value during deserialization, defaulting to ``False``.
+
 0.5.2 (2010-04-09)
 ------------------
 
