More tweaks in support of Deform.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,7 +10,12 @@ Next release
   of Unicode values is done by the String type.  This differs from the
   previous behavior, where ``None`` implied that the encoding was
   ``utf-8``.  Pass the encoding as ``utf-8`` specifically to get the
-  older behavior back.
+  older behavior back.  This is in support of Deform.
+
+- The default ``err_template`` value attached to the ``colander.Date``
+  and ``colander.Datetime` types was changed.  It is now simply
+  ``Invalid date`` instead of ``_('${val} cannot be parsed as an
+  iso8601 date: ${err}')``.  This is in support of Deform.
 
 0.6.1 (2010-05-04)
 ------------------
