--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,13 +20,16 @@ Next release
 - Upgrade explanations required: serialization of partial data
   structures is no longer possible (use ``default=null`` for nullable
   nodes), ``partial`` argument and attribute of colander.MappingSchema
-  has been removed, ``check_default`` / ``check_missing`` methods
-  added to SchemaNode, ``missing`` constructor arg to SchemaNode,
-  nulls may be present in serialized and deserialized data structures,
-  ``sdefault`` attribute of SchemaNode has been removed, ``srequired``
-  attribute of SchemaNode has been added, types must now expect
-  ``colander.default`` as ``value`` during deserialization and
-  serialization instead of None.
+  has been removed, ``null`` added to serialization data structure for
+  partials instead of skipping them like before, ``missing``
+  constructor arg to SchemaNode, nulls may be present in serialized
+  and deserialized data structures, ``sdefault`` attribute of
+  SchemaNode has been removed, ``srequired`` attribute of SchemaNode
+  has been added, types must now expect ``colander.default`` as
+  ``value`` during deserialization and serialization instead of None,
+  ``colander.SchemaNode.serialize`` and
+  ``colander.SchemaNode.deserialize`` now require no explicit value
+  argument (value defaults to ``colander.default``).
 
 0.6.2 (2010-05-08)
 ------------------
