--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -33,8 +33,8 @@ Next release
   ``colander.SchemaNode.deserialize`` now require no explicit value
   argument (value defaults to ``colander.default``), ``allow_empty``
   argument of ``colander.String`` type removed (use ``missing=''``
-  instead in the surrounding schemanode), deserialization of ``null``
-  in ``colander.String`` returns null now.
+  instead in the surrounding schemanode), serialization and
+  deserialization of ``null`` in ``colander.String`` returns null now.
 
 0.6.2 (2010-05-08)
 ------------------
