- The constructor of a ``colander.SchemaNode`` now accepts a   ``widget`` keyword argument, for use by Deform (it is not used   internally).

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,10 @@ Next release
 - Add an ``colander.SchemaNode.__iter__`` method, which iterates over
   the children nodes of a schema node.
 
+- The constructor of a ``colander.SchemaNode`` now accepts a
+  ``widget`` keyword argument, for use by Deform (it is not used
+  internally).
+
 0.7.1 (2010/06/12)
 ------------------
 
