--- a/colander/locale/es/LC_MESSAGES/colander.po
+++ b/colander/locale/es/LC_MESSAGES/colander.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2010-04-25 21:09-0400\n"
 "PO-Revision-Date: 2010-09-09 18:12-0500\n"
-"Last-Translator: Tres Seaver <tseaver@palladion.com>\n"
+"Last-Translator: Douglas Cerna <douglascerna@yahoo.com>\n"
 "Language-Team: repoze developers <repoze-dev@lists.repoze.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
