Apply Douglas Cerna's fixed .pot file,  corresponding updates to the es locale.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changes
 Unreleased
 ----------
 
-- Added Spanish locale:  thanks to David Cerna for the translations!
+- Added Spanish locale:  thanks to Douglas Cerna for the translations!
 
 0.8  (2010/09/08)
 -----------------
