--- a/colander/locale/de_DE/LC_MESSAGES/colander.po
+++ b/colander/locale/de_DE/LC_MESSAGES/colander.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: colander 0.5.2\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2010-04-25 21:09-0400\n"
-"PO-Revision-Date: 2010-10-01 09:30+0100\n"
+"PO-Revision-Date: 2010-10-01 09:52+0100\n"
 "Last-Translator: Charlie Clark <charlie@begeistert.org>\n"
 "Language-Team: repoze developers <repoze-dev@lists.repoze.org>\n"
 "MIME-Version: 1.0\n"
@@ -30,15 +30,15 @@ msgstr "Ungültige E-Mail-Adresse"
 
 #: colander/__init__.py:246
 msgid "${val} is less than minimum value ${min}"
-msgstr "${val} ist kleiner als der erlaubter Mindestwert, ${min}"
+msgstr "${val} ist kleiner als der erlaubter Mindestwert (${min})"
 
 #: colander/__init__.py:247
 msgid "${val} is greater than maximum value ${max}"
-msgstr "${val} ist größer als der erlaubter Höchstwert, ${max}"
+msgstr "${val} ist größer als der erlaubter Höchstwert (${max})"
 
 #: colander/__init__.py:279
 msgid "Shorter than minimum length ${min}"
-msgstr "Kürzer als der erlaubte Mindestlänge ${min} characters."
+msgstr "Kürzer als der erlaubte Mindestlänge (mindestens ${min} Zeichen)."
 
 #: colander/__init__.py:285
 msgid "Longer than maximum length ${max}"
@@ -54,7 +54,7 @@ msgstr "\"${val}\" ist kein Mapping: ${err}"
 
 #: colander/__init__.py:394
 msgid "\"${val}\" is required but missing"
-msgstr "\"${val}\" ist Pflicht aber fehlt"
+msgstr "\"${val}\" ist Pflichtangabe"
 
 #: colander/__init__.py:411
 msgid "Unrecognized keys in mapping: \"${val}\""
@@ -67,7 +67,7 @@ msgstr "\"${val}\" ist nicht iterierbar"
 
 #: colander/__init__.py:469
 msgid "\"${val}\" has an incorrect number of elements (expected ${exp}, was ${was})"
-msgstr "Ungültige Anzahl an Elemente (${exp} erwartet, ${was} gegeben)"
+msgstr "Ungültige Anzahl von Elemente (${exp} erwartet, ${was} gegeben)"
 
 #: colander/__init__.py:644
 msgid "${val} is not a string: %{err}"
@@ -90,7 +90,7 @@ msgstr "${val} kann nicht in eine Zeichenkette umgewandelt werden: ${err}"
 #: colander/__init__.py:713
 #: colander/__init__.py:722
 msgid "\"${val}\" is not a number"
-msgstr "\"${val}\" ist keine Zahö"
+msgstr "\"${val}\" ist keine Zahl"
 
 #: colander/__init__.py:747
 msgid "${val} is not a string"
@@ -100,7 +100,7 @@ msgstr "${val} ist keine Zeichenkette"
 #: colander/__init__.py:825
 #: colander/__init__.py:835
 msgid "relative name \"${val}\" irresolveable without package"
-msgstr "relativer Name \"${val}\" ist ohne Paket unauflösbar"
+msgstr "relativer Name \"${val}\" ist ohne Paket nicht auflösbar"
 
 #: colander/__init__.py:860
 msgid "\"${val}\" is not a string"
@@ -117,7 +117,7 @@ msgstr "\"${val}\" hat kein __name__ Attribut"
 #: colander/__init__.py:918
 #: colander/__init__.py:982
 msgid "${val} cannot be parsed as an iso8601 date: ${err}"
-msgstr "${val} kann nicht als ein SO8601 Datum geparst werden: ${err}"
+msgstr "${val} kann nicht als ein ISO8601 Datum geparst werden: ${err}"
 
 #: colander/__init__.py:929
 msgid "\"${val}\" is not a datetime object"
