--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 =======
 
+Next release
+------------
+
+- Fix documentation: 0.9.2 requires ``deserialize`` of types to explicitly
+  deal with the potential to receive ``colander.null``.
+
 0.9.2 (2011-03-28)
 ------------------
 
