--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,8 +14,9 @@ Next release
   ``colander.DateTime``.  See
   https://github.com/Pylons/colander/issues#issue/6.
 
-- Add the ability to insert a :class:`~colander.interfaces.Preparer`
-  between deserialization and validation. See the :ref:`preparing`.
+- Add the ability to insert a ``colander.interfaces.Preparer`` between
+  deserialization and validation. See the Preparing section in the
+  documentation.
 
 0.9.2 (2011-03-28)
 ------------------
