--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changes
 Next release
 ------------
 
+- Add ``Time`` type.
+
 - Add Dutch translation.
 
 - Fix documentation: 0.9.2 requires ``deserialize`` of types to explicitly
