--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 Changes
 =======
 
-Unreleased
-----------
+0.9.4 (2011-10-14)
+------------------
 
 - ``flatten`` now only includes leaf nodes in the flattened dict.
 
@@ -16,6 +16,8 @@ Unreleased
 
 - Added ``get_value`` and ``set_value`` methods to ``Schema`` which allow
   access and mutation of appstructs using dotted name paths.
+
+- Add Swedish, French, Chinese translations.
 
 0.9.3 (2011-06-23)
 ------------------
