--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,9 @@ Next release
   https://github.com/Pylons/colander/pull/12 , and
   https://github.com/Pylons/colander/issues/2 .
 
+- Invalid.messages() now returns an empty list if there are no messages.
+  See https://github.com/Pylons/colander/pull/21 .
+
 0.9.6 (2012-02-14)
 ------------------
 
